wallet_core/wallet_common/wallet_common_macros/tests/derive_error_category/fail_on_invalid_category.stderr
error: Expected any of ["expected", "critical", "pd", "defer"], got "invalid".
 --> tests/derive_error_category/fail_on_invalid_category.rs:3:16
  |
3 |     #[category(invalid)]
  |                ^^^^^^^
