wallet_core/wallet_common/wallet_common_macros/tests/derive_error_category/fail_on_invalid_category.rs
#[derive(wallet_common_macros::ErrorCategory)]
enum Error {
    #[category(invalid)]
    Invalid,
}

fn main() {}
